--- a/Piller.csproj
+++ b/Piller.csproj
@@ -38,8 +38,12 @@
     <Compile Include="Services\IPermanentStorageService.cs" />
     <Compile Include="Data\DaysOfWeek.cs" />
     <Compile Include="ViewModels\DataChangedMessage.cs" />
+    <Compile Include="ViewModels\PhotoGalleryViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="MvvmCross.Plugins.PictureChooser, Version=4.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\MvvmCross.Plugin.PictureChooser.4.4.0\lib\portable-net45+win+wpa81+wp80\MvvmCross.Plugins.PictureChooser.dll</HintPath>
+    </Reference>
     <Reference Include="SQLite-net">
       <HintPath>packages\sqlite-net-pcl.1.3.1\lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10\SQLite-net.dll</HintPath>
     </Reference>
@@ -99,12 +103,7 @@
     <None Include="packages.config" />
     <Compile Include="PillerApp.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Data\" />
-    <Folder Include="ViewModels\" />
-    <Folder Include="Resources\" />
-    <Folder Include="Services\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <EmbeddedResource Include="Resources\AppResources.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
