--- a/packages.config
+++ b/packages.config
@@ -7,6 +7,7 @@
   <package id="MvvmCross.Platform" version="4.4.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="MvvmCross.Plugin.File" version="4.4.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="MvvmCross.Plugin.Messenger" version="4.4.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="MvvmCross.Plugin.PictureChooser" version="4.4.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="reactiveui" version="7.2.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="reactiveui-core" version="7.2.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Rx-Core" version="2.2.5" targetFramework="portable45-net45+win8+wp8+wpa81" />
