--- a/Piller.csproj
+++ b/Piller.csproj
@@ -39,10 +39,11 @@
     <Compile Include="Data\DaysOfWeek.cs" />
     <Compile Include="ViewModels\DataChangedMessage.cs" />
     <Compile Include="ViewModels\PhotoGalleryViewModel.cs" />
+    <Compile Include="ViewModels\ShowGalleryMessage.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Mono.Android">
-      <HintPath>..\Program Files (x86)\Microsoft Visual Studio\2017\Community\Common7\IDE\ReferenceAssemblies\Microsoft\Framework\MonoAndroid\v7.1\Mono.Android.dll</HintPath>
+      <HintPath>..\..\Program Files (x86)\Microsoft Visual Studio\2017\Community\Common7\IDE\ReferenceAssemblies\Microsoft\Framework\MonoAndroid\v7.1\Mono.Android.dll</HintPath>
     </Reference>
     <Reference Include="MvvmCross.Plugins.PictureChooser, Version=4.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\MvvmCross.Plugin.PictureChooser.4.4.0\lib\portable-net45+win+wpa81+wp80\MvvmCross.Plugins.PictureChooser.dll</HintPath>
