Dodanie możliwości przechowywania osobno zdjęcia opakowania, tabletki i recepty

--- a/Droid/Piller.Droid.csproj
+++ b/Droid/Piller.Droid.csproj
@@ -221,7 +221,9 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\Icon.png" />
     <AndroidResource Include="Resources\values\SplashStyle.xml" />
     <AndroidResource Include="Resources\layout\SplashScreen.axml" />
-    <AndroidResource Include="Resources\layout\MedicationSummaryListView.axml" />
+    <AndroidResource Include="Resources\layout\MedicationSummaryListView.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
     <AndroidResource Include="Resources\drawable\splash.png" />
     <AndroidResource Include="Resources\values\Styles.xml" />
     <AndroidResource Include="Resources\values\material_design_colors.xml" />
